--- a/package.json
+++ b/package.json
@@ -9,19 +9,24 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "1.21.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
-    "expo": "^49.0.23",
-    "expo-av": "~13.10.5",
+    "expo": "^50.0.17",
+    "expo-av": "~13.10.6",
+    "expo-camera": "~14.1.3",
+    "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
+    "lottie-react-native": "6.5.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.30.1",
-    "lottie-react-native": "5.1.6"
+    "react-native-safe-area-context": "4.8.2",
+    "react-native-screens": "~3.29.0",
+    "expo-file-system": "~16.0.9"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.24.4"
   },
   "private": true
 }
